Test/semantic_tests/error09_arg_mismatch.expected
Error type 9 at Line 8: Function argument mismatch.
