Test/semantic_tests/error09_arg_mismatch.cmm
int foo(int x)
{
    return x;
}

int main()
{
    foo(1, 2);
    return 0;
}
